Add factory method

--- a/DesignPatterns/src/main/resources/2.SimpleFactory.md
+++ b/DesignPatterns/src/main/resources/2.SimpleFactory.md
@@ -1,8 +1,10 @@
 ## 简单工厂模式
-#### 1.步骤：
-- 同一个类型的不同类(ApplePhone、XiaoMiPhone、HuaWeiPhone)实现一个顶层接口或者继承一个父类(Phone)
-- 创建一个工厂类，用于创建上面的不同类的实例(PhoneFactory)
-- 在别处使用工厂类创建不同的类对象(Main)
+#### 1.文件内容
+> - Phone 顶层产品接口
+> - ApplePhone 苹果手机类，实现Phone接口，内有苹果手机具体的属性和操作逻辑
+> - HuaWeiPhone 华为手机类，实现Phone接口，内有华为手机具体的属性和操作逻辑
+> - XiaoMiPhone 小米手机类，实现Phone接口，内有小米手机具体的属性和操作逻辑
+> - PhoneFactory 手机工厂类，用于创建以上三个产品的具体实例
 #### 2.优缺点
 - 优点：屏蔽了对象的创建过程，使用户不必关心具体的创建细节
-- 缺点：当新增加一个类型的时候，仍然需要在PhoneFactory中增加或修改代码，违反了开闭原则，因此简单工厂模式并不是23种设计模式中的一种
+- 缺点：可扩展性差，当新增加一个类型的时候，仍然需要在PhoneFactory中增加或修改代码，违反了开闭原则，因此简单工厂模式并不是23种设计模式中的一种
