Add abstract method

--- a/DesignPatterns/src/main/resources/3.FactoryMethod.md
+++ b/DesignPatterns/src/main/resources/3.FactoryMethod.md
@@ -11,5 +11,6 @@
 > - HuaWeiPhoneFactory 华为手机工厂类，实现Factory接口，用于创建华为手机这个产品类
 > - XiaoMiPhoneFactory 小米手机工厂类，实现Factory接口，用于创建小米手机这个产品类
 #### 3.优点
-- 工厂模式的优点在于良好的封装性和可扩展性，如果想要增加新的产品（如：OppoPhone），只需要增加对应的工厂类即可，同时和简单工厂一样，它也向用户屏蔽了不相关的细节，使得系统的耦合度得以降低。
+- 工厂模式的优点在于良好的封装性和可扩展性(在产品纬度上扩展十分方便)，如果想要增加新的产品（如：OppoPhone），
+只需要增加对应的工厂类即可，同时和简单工厂一样，它也向用户屏蔽了不相关的细节，使得系统的耦合度得以降低。
 
