--- a/DesignPatterns/src/main/resources/2.SimpleFactory.md
+++ b/DesignPatterns/src/main/resources/2.SimpleFactory.md
@@ -1,4 +1,5 @@
 ## 简单工厂模式
+简单工厂模式的核心在于，将所需对象的创建交给一个工厂来处理，而不需要每次手动new一个对象
 
 #### 1.文件内容
 > - Phone 顶层产品接口
@@ -11,6 +12,7 @@
 - 优点：屏蔽了对象的创建过程，使用户不必关心具体的创建细节
 - 缺点：可扩展性差，当新增加一个类型的时候，仍然需要在PhoneFactory中增加或修改代码，违反了开闭原则，因此简单工厂模式并不是23种设计模式中的一种
 > 在简单工厂的方法中返回static类型的类，就是我们常说的静态工厂
+
 #### 3.注意
 - 关于工厂方法，使用接口或者使用抽象类需要视具体情况而定，一般来说
 > 表示具体的客观事物的时候使用抽象类
