--- a/MySQL/src/main/resources/2.数据库存储引擎.md
+++ b/MySQL/src/main/resources/2.数据库存储引擎.md
@@ -20,11 +20,11 @@
 
 MyISAM引擎的索引结构为B+Tree，其中B+Tree的数据域存储的内容为实际数据的地址，也就是说它的索引和实际的数据是分开的，只不过是用索引指向了实际的数据，这种索引就是所谓的非聚集索引。如下图所示：
 
-![img](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\myisam,png)
+![img](https://github.com/CrazyLiu-9527/Life-is-a-marathon/blob/master/MySQL/src/main/resources/pic/myisam.png)
 
 　　这里设表一共有三列，假设我们以Col1为主键，则上图是一个MyISAM表的主索引（Primary key）示意。可以看出MyISAM的索引文件仅仅保存数据记录的地址。在MyISAM中，主索引和辅助索引（Secondary key）在结构上没有任何区别，只是主索引要求key是唯一的，而辅助索引的key可以重复。如果我们在Col2上建立一个辅助索引，则此索引的结构如下图所示：
 
-![img](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\myisam2,png)
+![img](https://github.com/CrazyLiu-9527/Life-is-a-marathon/blob/master/MySQL/src/main/resources/pic/myisam2.png)
 
 　　同样也是一颗B+Tree，data域保存数据记录的地址。因此，MyISAM中索引检索的算法为首先按照B+Tree搜索算法搜索索引，如果指定的Key存在，则取出其data域的值，然后以data域的值为地址，读取相应数据记录。
 
