--- a/MySQL/src/main/resources/1.一条sql语句在mysql中的执行过程.md
+++ b/MySQL/src/main/resources/1.一条sql语句在mysql中的执行过程.md
@@ -98,7 +98,7 @@ select * from tb_student  A where A.age='18' and A.name=' 张三 ';
 
 * 先检查该语句是否有权限，如果没有权限，直接返回错误信息，如果有权限，在 MySQL8.0 版本以前，会先查询缓存，以这条 sql 语句为 key 在内存中查询是否有结果，如果有直接缓存，如果没有，执行下一步。
 
-* 通过分析器进行词法分析，提取 sql 语句的关键元素，比如提取上面这个语句是查询 select，提取需要查询的表名为 tb_student,需要查询所有的列，查询条件是这个表的 id='1'。然后判断这个 sql 语句是否有语法错误，比如关键词是否正确等等，如果检查没问题就执行下一步。
+* 通过分析器进行词法分析，提取 sql 语句的关键元素，比如提取上面这个语句是查询 select，提取需要查询的表名为 tb_student，需要查询所有的列，查询条件是这个表的 id='1'。然后判断这个 sql 语句是否有语法错误，比如关键词是否正确等等，如果检查没问题就执行下一步。
 
 * 接下来就是优化器进行确定执行方案，上面的 sql 语句，可以有两种执行方案：
 
@@ -111,6 +111,12 @@ select * from tb_student  A where A.age='18' and A.name=' 张三 ';
 
 #### 2.2 更新语句
 
+更新语句，例如：
+
+```sql
+update T set c=c+1 where ID=2; 
+```
+
 ##### 临时记录：redo log
 
 酒店掌柜有一个账本和一个小黑板，来做赊账的记录。有以下两种方案：
@@ -119,18 +125,17 @@ select * from tb_student  A where A.age='18' and A.name=' 张三 ';
 2. 先在黑板上记录本次要做的操作，打烊后按照黑板上的记录向账本上进行核算
 
 当生意红火，顾客络绎不绝时，第一种方案效率实在是低下，掌柜的一定按照第二种方案来记账。
- 同样的，MySQL如果每次更新操作都要写入磁盘，在磁盘中找到对应记录，然后更新，这个过程的IO成本、查找成本都太高了。
- 为了解决和这个问题，MySQL就使用了类似于`黑板-账本`模式来提高效率。这一模式即为`WAL技术`，全程为`Write-Ahead Logging`，关键点:**先写日志，再写磁盘**，也就是前文中先写黑板，再写账本。
+    同样的，MySQL如果每次更新操作都要写入磁盘，在磁盘中找到对应记录，然后更新，这个过程的IO成本、查找成本都太高了。
+    为了解决和这个问题，MySQL就使用了类似于`黑板-账本`模式来提高效率。这一模式即为`WAL技术`，全程为`Write-Ahead Logging`，关键点:**先写日志，再写磁盘**，也就是前文中先写黑板，再写账本。
 
 具体步骤如下：
- 当有记录需要更新，innoDB先把记录写入redo log中，并更新内存，这是更新操作就算结束了。innoDB引擎会在适当的时候讲操作记录更新到磁盘里，这一动作一般是系统比较闲的时候做的。
- redo log的大小是固定的，共有4个文件组成，每个大小为1G。逻辑上可以将4个文件理解为环形，从头开始写，写到末尾又重新开始新的一轮,如下图所示
+    当有记录需要更新，innoDB先把记录写入redo log中，并更新内存，这是更新操作就算结束了。innoDB引擎会在适当的时候将操作记录更新到磁盘里，这一动作一般是系统比较闲的时候做的。
+    redo log的大小是固定的，共有4个文件组成，每个大小为1G。逻辑上可以将4个文件理解为环形，从头开始写，写到末尾又重新开始新的一轮,如下图所示
 
 ![img](https:////upload-images.jianshu.io/upload_images/2998394-04c6cf9c39248055.jpg?imageMogr2/auto-orient/strip|imageView2/2/w/1142/format/webp)
 
-
- write pos为当前记录位置，check point为当前擦除点的位置，当记录更新时，check point会随着文件的记录向后移动。擦除后未写入的位置可以记录新的操作。当write pos追上了check point，则需要停下来写入动作，将redo log内容写入磁盘,然后清除check point向后移动。
- 有了redo log，innoDB可以知晓每一次操作，保证当数据库发生异常重启时，之前的能够根据redo log恢复之前的记录，这种能力叫做`"crash-safe"`。
+​    write pos为当前记录位置，check point为当前擦除点的位置，当记录更新时，check point会随着文件的记录向后移动。擦除后未写入的位置可以记录新的操作。当write pos追上了check point，则需要停下来写入动作，将redo log内容写入磁盘,然后清除check point向后移动。
+​    有了redo log，innoDB可以知晓每一次操作，保证当数据库发生异常重启时，之前的能够根据redo log恢复之前的记录，这种能力叫做`"crash-safe"`。
 
 
 
@@ -139,7 +144,7 @@ select * from tb_student  A where A.age='18' and A.name=' 张三 ';
 redo log与bin log日志的区别：
 
 1. redo log 是属于innoDB引擎所有，bin log是server提供的，所有引擎都可以使用
-2. redo log 属于物理日志，记录`"在某个数据页做了什么修改"`，bin log记录的是该语句逻辑日志，`"将ID=2的这一行c的值+1"` [[1\]](#fn1)
+2. redo log 属于物理日志，记录`在某个数据页做了什么修改`，bin log记录的是该语句逻辑日志，`将ID=2的这一行c的值+1` 
 3. redo log日志文件是循环使用的，空间有使用完的时刻，bin log是追加记录的，不会覆盖之前的记录
 
 也就是说，server搭配其他引擎是没有redo log的，因此也就没有了crash-safe能力
@@ -166,8 +171,8 @@ redo log与bin log日志的区别：
 ##### 两阶段提交
 
 从上图可以看出，redo log是分两个阶段来提交的,这是为了保持两个日志逻辑上一致
- 如果不用两阶段提交会发生什么呢 利用反证法来看下：
- 假设初始ID=2的数据行，c的值为0，现在要执行c+1的操作。
+如果不用两阶段提交会发生什么呢 利用反证法来看下：
+假设初始ID=2的数据行，c的值为0，现在要执行c+1的操作。
 
 1. **先记录redo log 后记录bin log** 如果刚记录完redo log，还没有记录bin log时，c的值已经记录变为1，这时MySQL服务崩溃重启，根据crash-safe机制，可以用redo log来恢复数据库，恢复后的数据中c的值为1。由于bin log中没有记录这一变化，以后备份bin log时，c的值还是0。如果有一天需要从bin log回复一台备用数据库，由于bin log少了一次更新，则最后恢复出来的c值仍然为0，与原库中值不符合
 2. **先记录bin log 后记录redo log**  写完bin log就发生crash，还没来得及写入redo log，崩溃恢复后这个事务是无效的，因此c的值还是0，但是bin log中已经记录了"将c的值+1"的日志，所以用bin log恢复出来的数据多出来一个事务，使得c的值为1，与原库中数据不符。
@@ -179,8 +184,6 @@ redo log与bin log日志的区别：
 
 1. redo log状态为 commit
 2. redo log状态为prepare**并且**bin log记录完整 （提交commit之前）
-
-##### 总结
 
 这节主要学习了两个日志文件的用法 redo log 用于保证 crash-safe 能力，bin log用于恢复数据的完整性
 
