--- a/MySQL/src/main/resources/3.数据库索引.md
+++ b/MySQL/src/main/resources/3.数据库索引.md
@@ -29,9 +29,9 @@
 
 MySQL的基本存储结构是页(记录都存在页里边)：
 
-![MySQL的基本存储结构是页](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\innodb1.jpg)
+![MySQL的基本存储结构是页](pic/innodb1.jpg)
 
-![](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\innodb2.jpg)
+![](pic/innodb2.jpg)
 
  - **各个数据页可以组成一个双向链表**
  - **每个数据页中的记录又可以组成一个单向链表**
@@ -50,11 +50,11 @@ MySQL的基本存储结构是页(记录都存在页里边)：
 
 索引做了些什么可以让我们查询加快速度呢？其实就是将无序的数据变成有序(相对)：
 
-![](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\innodb3jpg)
+![](pic/innodb3jpg)
 
 要找到id为8的记录简要步骤：
 
-![](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\innodb4jpg)
+![](pic/innodb4jpg)
 
 很明显的是：没有用索引我们是需要遍历双向链表来定位对应的页，现在通过 **“目录”** 就可以很快地定位到对应的页上了！（二分查找，时间复杂度近似为O(logn)）
 
@@ -68,7 +68,7 @@ MySQL的基本存储结构是页(记录都存在页里边)：
 * B树的叶子节点都是独立的;B+树的叶子节点有一条引用链指向与它相邻的叶子节点。
 * B树的检索的过程相当于对范围内的每个节点的关键字做二分查找，可能还没有到达叶子节点，检索就结束了。而B+树的检索效率就很稳定了，任何查找都是从根节点到叶子节点的过程，叶子节点的顺序检索很明显。
 
-![B+树](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\B+树.png)
+![B+树](pic/B+树.png)
 
 ### Hash索引和 B+树索引优劣分析
 
@@ -117,7 +117,7 @@ B+树是有序的，在这种范围查询中，优势非常大，直接遍历比
 4. **全文索引(Full Text)** ：全文索引主要是为了检索大文本数据中的关键字的信息，是目前搜索引擎数据库使用的一种技术。Mysql5.6之前只有MYISAM引擎支持全文索引，5.6之后InnoDB也支持了全文索引。 
 
 二级索引:
-![B+树](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\B+树二级索引(辅助索引).png)
+![B+树](pic/B+树二级索引(辅助索引).png)
 
 ## 聚集索引与非聚集索引
 
@@ -162,11 +162,11 @@ B+树是有序的，在这种范围查询中，优势非常大，直接遍历比
 
 这是Mysql的表的文件截图:
 
-![Mysql表文件截图](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\Mysql索引文件截图.png)
+![Mysql表文件截图](pic/Mysql索引文件截图.png)
 
 聚集索引和非聚集索引:
 
-![B+树](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\B+树索引.png)
+![B+树](pic/B+树索引.png)
 
 ### 非聚集索引一定回表查询吗(覆盖索引)?
 
@@ -202,7 +202,7 @@ SELECT id FROM table WHERE id=1;
 >那么直接根据这个索引就可以查到数据，也无需回表。
 
 覆盖索引:
-![B+树覆盖索引](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\B+树覆盖索引.png)
+![B+树覆盖索引](pic/B+树覆盖索引.png)
 
 ---
 
@@ -230,11 +230,11 @@ select * from user where city=xx ; // 无法命中索引
 
 由于最左前缀原则，在创建联合索引时，索引字段的顺序需要考虑字段值去重之后的个数，较多的放前面。ORDER BY子句也遵循此规则。
 
-![联合索引(D:/02_learn/Project/JavaGuide/media/pictures/database/联合索引(多列索引).png)](../../media/pictures/database/联合索引(多列索引).png)
+![联合索引](pic/联合索引(多列索引).png)
 
 无论是否符合最左前缀原则，每个字段的索引都生效:
 
-![联合索引生效](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\联合索引之查询条件生效.png)
+![联合索引生效](pic/联合索引之查询条件生效.png)
 
 ## 索引创建注意点
 
