--- a/MySQL/src/main/resources/4.数据库事务.md
+++ b/MySQL/src/main/resources/4.数据库事务.md
@@ -23,7 +23,7 @@
 
 ### 事务的特性(ACID)
 
-![事务的特性](D:\02_learn\Project\Life-is-a-marathon\MySQL\src\main\resources\pic\事务特性.png)
+![事务的特性](pic/事务特性.png)
 
 
 1.  **原子性：** 事务是最小的执行单位，不允许分割。事务的原子性确保动作要么全部完成，要么完全不起作用；
