Add mysql files

--- a/MySQL/src/main/resources/1.一条sql语句在mysql中的执行过程.md
+++ b/MySQL/src/main/resources/1.一条sql语句在mysql中的执行过程.md
@@ -1,18 +1,4 @@
-- [一 MySQL 基础架构分析](#一-mysql-基础架构分析)
-  - [1.1 MySQL 基本架构概览](#11-mysql-基本架构概览)
-  - [1.2 Server 层基本组件介绍](#12-server-层基本组件介绍)
-    - [1) 连接器](#1-连接器)
-    - [2) 查询缓存(MySQL 8.0 版本后移除)](#2-查询缓存mysql-80-版本后移除)
-    - [3) 分析器](#3-分析器)
-    - [4) 优化器](#4-优化器)
-    - [5) 执行器](#5-执行器)
-- [二 语句分析](#二-语句分析)
-  - [2.1 查询语句](#21-查询语句)
-  - [2.2 更新语句](#22-更新语句)
-- [三 总结](#三-总结)
-- [四 参考](#四-参考)
-
-
+[toc]
 
 本篇文章会分析下一个sql语句在MySQL中的执行过程，包括sql的查询子啊MySQL内部会怎么流转，sql语句的更新是怎么完成的。
 
@@ -132,7 +118,7 @@ update T set c=c+1 where ID=2;
     当有记录需要更新，innoDB先把记录写入redo log中，并更新内存，这是更新操作就算结束了。innoDB引擎会在适当的时候将操作记录更新到磁盘里，这一动作一般是系统比较闲的时候做的。
     redo log的大小是固定的，共有4个文件组成，每个大小为1G。逻辑上可以将4个文件理解为环形，从头开始写，写到末尾又重新开始新的一轮,如下图所示
 
-![img](https://github.com/CrazyLiu-9527/Life-is-a-marathon/blob/master/MySQL/src/main/resources/pic/redolog.png)
+![img](pic/redolog.png)
 
 ​    write pos为当前记录位置，check point为当前擦除点的位置，当记录更新时，check point会随着文件的记录向后移动。擦除后未写入的位置可以记录新的操作。当write pos追上了check point，则需要停下来写入动作，将redo log内容写入磁盘,然后清除check point向后移动。
 ​    有了redo log，innoDB可以知晓每一次操作，保证当数据库发生异常重启时，之前的能够根据redo log恢复之前的记录，这种能力叫做`"crash-safe"`。
@@ -161,7 +147,7 @@ redo log与bin log日志的区别：
 
 下图是[《MySQL实战》](https://time.geekbang.org/column/article/68633)提供的流程图：
 
-![img](https://github.com/CrazyLiu-9527/Life-is-a-marathon/blob/master/MySQL/src/main/resources/pic/sql%20update%E6%89%A7%E8%A1%8C%E8%BF%87%E7%A8%8B.png)
+![img](pic/sql%20update%E6%89%A7%E8%A1%8C%E8%BF%87%E7%A8%8B.png)
 
 
  浅色代表在innoDB中执行，深色在server中执行
