--- a/MySQL/src/main/resources/2.数据库存储引擎.md
+++ b/MySQL/src/main/resources/2.数据库存储引擎.md
@@ -1,3 +1,5 @@
+[toc]
+
 ## 数据库存储引擎
 
 ### 一 什么是存储引擎
@@ -20,11 +22,11 @@
 
 MyISAM引擎的索引结构为B+Tree，其中B+Tree的数据域存储的内容为实际数据的地址，也就是说它的索引和实际的数据是分开的，只不过是用索引指向了实际的数据，这种索引就是所谓的非聚集索引。如下图所示：
 
-![img](https://github.com/CrazyLiu-9527/Life-is-a-marathon/blob/master/MySQL/src/main/resources/pic/myisam.png)
+![img](pic/myisam.png)
 
 　　这里设表一共有三列，假设我们以Col1为主键，则上图是一个MyISAM表的主索引（Primary key）示意。可以看出MyISAM的索引文件仅仅保存数据记录的地址。在MyISAM中，主索引和辅助索引（Secondary key）在结构上没有任何区别，只是主索引要求key是唯一的，而辅助索引的key可以重复。如果我们在Col2上建立一个辅助索引，则此索引的结构如下图所示：
 
-![img](https://github.com/CrazyLiu-9527/Life-is-a-marathon/blob/master/MySQL/src/main/resources/pic/myisam2.png)
+![img](pic/myisam2.png)
 
 　　同样也是一颗B+Tree，data域保存数据记录的地址。因此，MyISAM中索引检索的算法为首先按照B+Tree搜索算法搜索索引，如果指定的Key存在，则取出其data域的值，然后以data域的值为地址，读取相应数据记录。
 
@@ -57,9 +59,7 @@ Innodb最大的优点就是针对事务的支持，事务（ACID），Java中使
 
 并且和MyISAM不同，**InnoDB的辅助索引数据域存储的也是相应记录主键的值而不是地址，所以当以辅助索引查找时，会先根据辅助索引找到主键，再根据主键索引找到实际的数据。所以Innodb不建议使用过长的主键，否则会使辅助索引变得过大。建议使用自增的字段作为主键，这样B+Tree的每一个结点都会被顺序的填满，而不会频繁的分裂调整，会有效的提升插入数据的效率。**
 
-
-
-#### 三 MyISAM和InnoDB区别
+### 三 MyISAM和InnoDB区别
 
 MyISAM是MySQL的默认数据库引擎（5.5版之前）。虽然性能极佳，而且提供了大量的特性，包括全文索引、压缩、空间函数等，但MyISAM不支持事务和行级锁，而且最大的缺陷就是崩溃后无法安全恢复。不过，5.5版本之后，MySQL引入了InnoDB（事务性数据库引擎），MySQL 5.5版本后默认的存储引擎为InnoDB。
 
