--- a/MySQL/src/main/resources/3.数据库索引.md
+++ b/MySQL/src/main/resources/3.数据库索引.md
@@ -1,3 +1,5 @@
+[toc]
+
 ## 一 什么是索引?
 
 **索引是一种用于快速查询和检索数据的数据结构。常见的索引结构有: B树， B+树和Hash。**
@@ -23,7 +25,7 @@
 
 
 
-## 三 为什么索引能提高查询速度
+## 三 索引的数据结构
 
 ### 先从 MySQL 的基本存储结构说起
 
@@ -32,6 +34,8 @@ MySQL的基本存储结构是页(记录都存在页里边)：
 ![MySQL的基本存储结构是页](pic/innodb1.jpg)
 
 ![](pic/innodb2.jpg)
+
+**<u>在没有索引的情况下，数据页是顺序存储的</u>**
 
  - **各个数据页可以组成一个双向链表**
  - **每个数据页中的记录又可以组成一个单向链表**
@@ -45,30 +49,49 @@ MySQL的基本存储结构是页(记录都存在页里边)：
 
 很明显，在数据量很大的情况下这样查找会很慢！这样的时间复杂度为O（n）。
 
+**这样一个个的遍历数据页，会频繁的操作磁盘IO，而IO操作是非常昂贵的，这就导致数据检索的效率非常低下。**
+
+
 
 ### 使用索引之后
 
-索引做了些什么可以让我们查询加快速度呢？其实就是将无序的数据变成有序(相对)：
+**<u>使用索引之后，数据页变成了使用特定的数据结构来存储。</u>**
 
-![](pic/innodb3jpg)
+比如下面是b+树的存储结构：
+
+![](pic/innodb3.jpg)
 
 要找到id为8的记录简要步骤：
 
-![](pic/innodb4jpg)
+ ![b+树](pic/B+树-索引.png) 
+
+数据查询过程
+
+> 1、首先将磁盘块1加载到内存中，发生一次IO，二分查找确定30在28和65之间，锁定磁盘块1的p2指针
+>
+> 2、通过磁盘块1的p2指针将磁盘块3加载到内存，产生第二次IO，同样经过二分查找锁定磁盘块3的P1指针
+>
+> 3、通过2步骤将磁盘块8加载进内存，产生第3次IO，查找到所需要的数据项30，结束
 
 很明显的是：没有用索引我们是需要遍历双向链表来定位对应的页，现在通过 **“目录”** 就可以很快地定位到对应的页上了！（二分查找，时间复杂度近似为O(logn)）
 
+**如上，一般真实情况下3层B+树可以表示上百万数据，而查找只需要三次IO，性能提高了多少啊！**
+
 其实底层结构就是B+树，B+树作为树的一种实现，能够让我们很快地查找出对应的记录。
+
+
 
 ## 四 索引类型和底层结构
 
 ### B树和B+树区别
 
-* B树的所有节点既存放 键(key) 也存放 数据(data);而B+树只有叶子节点存放 key 和 data，其他内节点只存放key。
+* B树的所有节点既存放 键(key) 也存放 数据(data)；而B+树只有叶子节点存放 key 和 data，其他内节点只存放key。
 * B树的叶子节点都是独立的;B+树的叶子节点有一条引用链指向与它相邻的叶子节点。
 * B树的检索的过程相当于对范围内的每个节点的关键字做二分查找，可能还没有到达叶子节点，检索就结束了。而B+树的检索效率就很稳定了，任何查找都是从根节点到叶子节点的过程，叶子节点的顺序检索很明显。
 
 ![B+树](pic/B+树.png)
+
+关于B树，B+树的数据结构可以查看本章节文章 12.平衡二叉树、B树、B+树、B*树 理解其中一种你就都明白了
 
 ### Hash索引和 B+树索引优劣分析
 
@@ -92,15 +115,140 @@ B+树是有序的，在这种范围查询中，优势非常大，直接遍历比
 
 ---
 
-## 五 索引类型
+## 五 常见的索引类型
 
-### 主键索引(Primary Key)
+### 普通索引
 
-**数据表的主键列使用的就是主键索引。**
+​     这是最基本的索引，它**没有任何限制**，比如上文中为title字段创建的索引就是一个普通索引，MyIASM中默认的BTREE类型的索引，也是我们大多数情况下用到的索引。 
 
-**一张数据表有只能有一个主键，并且主键不能为null，不能重复。**
+```sql
+–直接创建索引
+CREATE INDEX index_name ON table(column(length))
+
+–修改表结构的方式添加索引
+ALTER TABLE table_name ADD INDEX index_name ON (column(length))
+
+–创建表的时候同时创建索引
+CREATE TABLE `table` (
+    `id` int(11) NOT NULL AUTO_INCREMENT ,
+    `title` char(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL ,
+    `content` text CHARACTER SET utf8 COLLATE utf8_general_ci NULL ,
+    `time` int(10) NULL DEFAULT NULL ,
+     PRIMARY KEY (`id`),
+     INDEX index_name (title(length))
+)
+
+–删除索引
+DROP INDEX index_name ON table
+```
+
+### 唯一索引
+
+​    与普通索引类似，不同的就是：**索引列的值必须唯一，但允许有空值（注意和主键不同）**。如果是组合索引，则列值的组合必须唯一，创建方法和普通索引类似。 
+
+```sql
+–创建唯一索引
+CREATE UNIQUE INDEX indexName ON table(column(length))
+
+–修改表结构
+ALTER TABLE table_name ADD UNIQUE indexName ON (column(length))
+
+–创建表的时候直接指定
+CREATE TABLE `table` (
+    `id` int(11) NOT NULL AUTO_INCREMENT ,
+    `title` char(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL ,
+    `content` text CHARACTER SET utf8 COLLATE utf8_general_ci NULL ,
+    `time` int(10) NULL DEFAULT NULL ,
+    PRIMARY KEY (`id`),
+    UNIQUE indexName (title(length))
+);
+```
+
+### 主键索引
+
+​    主键索引是一种特殊的唯一索引，不允许有空值。一般是在建表的时候同时创建主键索引。
 
 **在mysql的InnoDB的表中，当没有显示的指定表的主键时，InnoDB会自动先检查表中是否有唯一索引的字段，如果有，则选择该字段为默认的主键，否则InnoDB将会自动创建一个6Byte的自增主键。**
+
+```sql
+-创建主键索引
+ALTER TABLE `table_name` ADD PRIMARY KEY (`column`) 
+
+–创建表的时候直接指定
+CREATE TABLE `table` (
+    `id` int(11) NOT NULL AUTO_INCREMENT ,
+    `title` char(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL ,
+    `content` text CHARACTER SET utf8 COLLATE utf8_general_ci NULL ,
+    `time` int(10) NULL DEFAULT NULL ,
+    -这里的PRIMARY KEY就是主键索引
+    PRIMARY KEY (`id`),
+);
+```
+
+### 组合索引
+
+​    平时用的SQL查询语句一般都有比较多的限制条件，所以为了进一步榨取MySQL的效率，就要考虑建立组合索引。例如上表中针对title和time建立一个组合索引：
+
+```sql
+ALTER TABLE article ADD INDEX index_titme_time (title(50),time(10))
+```
+
+建立这样的组合索引，其实是相当于分别建立了下面两组组合索引：
+
+```sql
+–title,time
+–title
+```
+
+​    为什么没有time这样的组合索引呢？这是因为MySQL组合索引“最左前缀”的结果。简单的理解就是只从最左面的开始组合。并不是只要包含这两列的查询都会用到该组合索引，如下面的几个SQL所示：
+
+```sql
+–命中索引
+SELECT * FROM article WHREE title='测试' AND time=1234567890;
+SELECT * FROM article WHREE utitle='测试';
+
+–未命中索引
+SELECT * FROM article WHREE time=1234567890;
+```
+
+### 前缀索引
+
+​    当要索引的列字符很多时 索引则会很大且变慢 (可以只索引列开始的部分字符串 节约索引空间 从而提高索引效率)。  对于BLOB，TEXT，或者很长的VARCHAR类型的列，必须使用前缀索引，因为MySQL不允许索引这些列的完整长度 
+
+```sql
+ alter table table_name add index(column(1)) 
+```
+
+### 全文索引
+
+​    通过数值比较、范围过滤等就可以完成绝大多数我们需要的查询，但是，如果希望通过关键字的匹配来进行查询过滤，那么就需要基于相似度的查询，而不是原来的精确数值比较。全文索引就是为这种场景设计的。你可能会说，用 like + % 就可以实现模糊匹配了，为什么还要全文索引？like + % 在文本比较少时是合适的，但是对于大量的文本数据检索，是不可想象的。**全文索引在大量的数据面前，能比 like + % 快 N 倍，速度不是一个数量级，但是全文索引可能存在精度问题。**
+
+```sql
+-创建表时创建全文索引
+create table fulltext_test (
+    id int(11) NOT NULL AUTO_INCREMENT,
+    content text NOT NULL,
+    tag varchar(255),
+    PRIMARY KEY (id),
+    FULLTEXT KEY content_tag_fulltext(content,tag)  // 创建联合全文索引列
+) ENGINE=MyISAM DEFAULT CHARSET=utf8;
+
+-在已存在的表上创建全文索引
+create fulltext index content_tag_fulltext on fulltext_test(content,tag);
+
+-通过 SQL 语句 ALTER TABLE 创建全文索引
+alter table fulltext_test add fulltext index content_tag_fulltext(content,tag);
+
+-直接使用 DROP INDEX 删除全文索引
+drop index content_tag_fulltext on fulltext_test;
+
+-通过 SQL 语句 ALTER TABLE 删除全文索引
+alter table fulltext_test drop index content_tag_fulltext;
+```
+
+
+
+## 六 聚集索引与非聚集索引
 
 ### 二级索引(辅助索引)
 
@@ -119,7 +267,7 @@ B+树是有序的，在这种范围查询中，优势非常大，直接遍历比
 二级索引:
 ![B+树](pic/B+树二级索引(辅助索引).png)
 
-## 聚集索引与非聚集索引
+
 
 ### 聚集索引
 
@@ -168,6 +316,23 @@ B+树是有序的，在这种范围查询中，优势非常大，直接遍历比
 
 ![B+树](pic/B+树索引.png)
 
+
+
+### 覆盖索引
+
+如果一个索引包含（或者说覆盖）所有需要查询的字段的值，我们就称之为“覆盖索引”。我们知道在InnoDB存储引擎中，如果不是主键索引，叶子节点存储的是主键+列值。最终还是要“回表”，也就是要通过主键再查找一次。这样就会比较慢覆盖索引就是把要查询出的列和索引是对应的，不做回表操作！
+
+**覆盖索引即需要查询的字段正好是索引的字段，那么直接根据该索引，就可以查到数据了，
+而无需回表查询。**
+
+>如主键索引，如果一条SQL需要查询主键，那么正好根据主键索引就可以查到主键。
+>
+>再如普通索引，如果一条SQL需要查询name，name字段正好有索引，
+>那么直接根据这个索引就可以查到数据，也无需回表。
+
+覆盖索引:
+![B+树覆盖索引](pic/B+树覆盖索引.png)
+
 ### 非聚集索引一定回表查询吗(覆盖索引)?
 
 **非聚集索引不一定回表查询。**
@@ -189,54 +354,11 @@ SELECT id FROM table WHERE id=1;
 
 主键索引本身的key就是主键，查到返回就行了。这种情况就称之为覆盖索引了。
 
-## 覆盖索引
-
-如果一个索引包含（或者说覆盖）所有需要查询的字段的值，我们就称之为“覆盖索引”。我们知道在InnoDB存储引擎中，如果不是主键索引，叶子节点存储的是主键+列值。最终还是要“回表”，也就是要通过主键再查找一次。这样就会比较慢覆盖索引就是把要查询出的列和索引是对应的，不做回表操作！
-
-**覆盖索引即需要查询的字段正好是索引的字段，那么直接根据该索引，就可以查到数据了，
-而无需回表查询。**
-
->如主键索引，如果一条SQL需要查询主键，那么正好根据主键索引就可以查到主键。
->
->再如普通索引，如果一条SQL需要查询name，name字段正好有索引，
->那么直接根据这个索引就可以查到数据，也无需回表。
-
-覆盖索引:
-![B+树覆盖索引](pic/B+树覆盖索引.png)
-
 ---
 
-## 索引创建原则
 
-### 单列索引
 
-单列索引即由一列属性组成的索引。
-
-### 联合索引(多列索引)
-
-联合索引即由多列属性组成索引。
-
-### 最左前缀原则
-
-MySQL中的索引可以以一定顺序引用多列，这种索引叫作联合索引。如User表的name和city加联合索引就是(name,city)，而最左前缀原则指的是，如果查询的时候查询条件精确匹配索引的左边连续一列或几列，则此列就可以被用到。如下：        
-
-```                                                                                       
-select * from user where name=xx and city=xx ; ／／可以命中索引
-select * from user where name=xx ; // 可以命中索引
-select * from user where city=xx ; // 无法命中索引            
-```
-
-这里需要注意的是，查询的时候如果两个条件都用上了，但是顺序不同，如 `city= xx and name ＝xx`，那么现在的查询引擎会自动优化为匹配联合索引的顺序，这样是能够命中索引的。
-
-由于最左前缀原则，在创建联合索引时，索引字段的顺序需要考虑字段值去重之后的个数，较多的放前面。ORDER BY子句也遵循此规则。
-
-![联合索引](pic/联合索引(多列索引).png)
-
-无论是否符合最左前缀原则，每个字段的索引都生效:
-
-![联合索引生效](pic/联合索引之查询条件生效.png)
-
-## 索引创建注意点
+## 七 索引创建注意点
 
 ### 最左前缀原则
 
@@ -286,37 +408,4 @@ select * from user where city=xx ; // 无法命中索引
 
 大多数情况下，索引查询都是比全表扫描要快的。但是如果数据库的数据量不大，那么使用索引也不一定能够带来很大提升。
 
-
-
-### Mysql如何为表字段添加索引？？？
-
-1.添加PRIMARY KEY（主键索引）
-
-```
-ALTER TABLE `table_name` ADD PRIMARY KEY ( `column` ) 
-```
-
-2.添加UNIQUE(唯一索引) 
-
-```
-ALTER TABLE `table_name` ADD UNIQUE ( `column` ) 
-```
-
-3.添加INDEX(普通索引) 
-
-```
-ALTER TABLE `table_name` ADD INDEX index_name ( `column` )
-```
-
-4.添加FULLTEXT(全文索引) 
-
-```
-ALTER TABLE `table_name` ADD FULLTEXT ( `column`) 
-```
-
-5.添加多列索引
-
-```
-ALTER TABLE `table_name` ADD INDEX index_name ( `column1`, `column2`, `column3` )
-```
 
