--- a/MySQL/src/main/resources/5.如何设计数据库表结构.md
+++ b/MySQL/src/main/resources/5.如何设计数据库表结构.md
@@ -1,4 +1,7 @@
-## 第四章 MySQL数据库结构优化
+[toc]
+
+## MySQL数据库结构优化
+
 ### 一 数据库结构优化介绍
 良好的数据库逻辑设计和物理设计是数据库获得高性能的基础
 
@@ -36,12 +39,12 @@
 
 #### 数据库设计的第二范式
 + 要求一个表中只有具有一个业务主键
-    
+  
     >也就是说符合第二范式的表中不能存在非主键列对只对部分主键的依赖关系
 
 #### 数据库设计的第三范式
 + 每一个非主属性既不部分依赖于也不传递依赖于业务主键
-    
+  
     >也就是在第二范式的基础上消除了非主属性对主键的传递依赖
 
 ### 三 需求分析及逻辑设计
