--- a/MySQL/src/main/resources/4.数据库事务.md
+++ b/MySQL/src/main/resources/4.数据库事务.md
@@ -41,19 +41,19 @@
 
 **SQL 标准定义了四个隔离级别：**
 
-- **READ-UNCOMMITTED(读取未提交)：** 最低的隔离级别，允许读取尚未提交的数据变更，**可能会导致脏读、幻读或不可重复读**。
-- **READ-COMMITTED(读取已提交)：** 允许读取并发事务已经提交的数据，**可以阻止脏读，但是幻读或不可重复读仍有可能发生**。
+- **READ-UNCOMMITTED(读未提交)：** 最低的隔离级别，允许读取尚未提交的数据变更，**可能会导致脏读、幻读或不可重复读**。
+- **READ-COMMITTED(读已提交)：** 允许读取并发事务已经提交的数据，**可以阻止脏读，但是幻读或不可重复读仍有可能发生**。
 - **REPEATABLE-READ(可重复读)：**  对同一字段的多次读取结果都是一致的，除非数据是被本身事务自己所修改，**可以阻止脏读和不可重复读，但幻读仍有可能发生**。
 - **SERIALIZABLE(可串行化)：** 最高的隔离级别，完全服从ACID的隔离级别。所有的事务依次逐个执行，这样事务之间就完全不可能产生干扰，也就是说，**该级别可以防止脏读、不可重复读以及幻读**。
 
 ----
 
-|     隔离级别     | 脏读 | 不可重复读 | 幻影读 |
-| :--------------: | :--: | :--------: | :----: |
-| READ-UNCOMMITTED |  √   |     √      |   √    |
-|  READ-COMMITTED  |  ×   |     √      |   √    |
-| REPEATABLE-READ  |  ×   |     ×      |   √    |
-|   SERIALIZABLE   |  ×   |     ×      |   ×    |
+|           隔离级别           | 脏读 | 不可重复读 | 幻读 |
+| :--------------------------: | :--: | :--------: | :--: |
+| READ-UNCOMMITTED（读未提交） |  √   |     √      |  √   |
+|  READ-COMMITTED（读已提交）  |  ×   |     √      |  √   |
+| REPEATABLE-READ（可重复读）  |  ×   |     ×      |  √   |
+|    SERIALIZABLE（序列化）    |  ×   |     ×      |  ×   |
 
 MySQL InnoDB 存储引擎的默认支持的隔离级别是 **REPEATABLE-READ（可重读）**。我们可以通过`SELECT @@tx_isolation;`命令来查看,MySQL 8.0 该命令改为`SELECT @@transaction_isolation;`
 
