Update mysql files

--- a/MySQL/src/main/resources/11.MySQL锁.md
+++ b/MySQL/src/main/resources/11.MySQL锁.md
@@ -1,5 +1,7 @@
 本文摘抄自[码农教程]( http://www.manongjc.com/article/14996.html )
 
+[toc]
+
 # MySQL锁详细讲解
 
 本文章向大家介绍MySQL锁详细讲解，包括数据库锁基本知识、表锁、表读锁、表写锁、行锁、MVCC、事务的隔离级别、悲观锁、乐观锁、间隙锁GAP、死锁等等，需要的朋友可以参考一下
@@ -28,9 +30,7 @@
 - 行锁
   - 开销大，加锁慢；会出现死锁；锁定粒度小，发生锁冲突的概率低，并发度高
 
-不同的存储引擎支持的锁粒度是不一样的：**InnoDB行锁和表锁都支持、MyISAM只支持表锁！InnoDB只有通过索引条件检索数据才使用行级锁**，否则，InnoDB使用表
-
-锁也就是说，InnoDB的行锁是基于索引的！
+不同的存储引擎支持的锁粒度是不一样的：**InnoDB行锁和表锁都支持、MyISAM只支持表锁！InnoDB只有通过索引条件检索数据才使用行级锁**，否则，InnoDB使用表锁。也就是说，InnoDB的行锁是基于索引的！
 
 **表锁下又分为两种模式**：
 
@@ -39,23 +39,29 @@
 - 从下图可以清晰看到，在表读锁和表写锁的环境下：**读读不阻塞，读写阻塞，写写阻塞**！
 
 1. 读读不阻塞：当前用户在读数据，其他的用户也在读数据，不会加锁
+
 2. 读写阻塞：当前用户在读数据，其他的用户不能修改当前用户读的数据，会加锁！
+
 3. 写写阻塞：当前用户在修改数据，其他的用户不能修改当前用户正在修改的数据，会加锁！
 
-![img](http://www.manongjc.com/images/cnblogs/15394321221N5394Yz32D122.png)
+   | 是否兼容 | None | 读锁 | 写锁 |
+   | :------: | :--: | :--: | :--: |
+   |   读锁   |  是  |  是  |  否  |
+   |   写锁   |  否  |  否  |  否  |
 
 从上面已经看到了：**读锁和写锁是互斥的，读写操作是串行**。
 
-- 如果某个进程想要获取读锁，**同时**另外一个进程想要获取写锁。在mysql中，**写锁是优先于读锁的**！
+- 如果某个进程想要获取读锁，同时另外一个进程想要获取写锁。在mysql中，**写锁是优先于读锁的**！
 - 写锁和读锁优先级的问题是可以通过参数调节的：max_write_lock_count和low-priority-updates
 
- 注：
-
- ![img](http://www.manongjc.com/images/cnblogs/1539432122Y15394321K2WU2.png)
+> 注：
+>
+> - **MyISAM可以**支持查询和插入操作的并发执行。可以通过系统变量`concurrent_insert`来指定哪种模式，在MyISAM中它默认是：如果MyISAM表中没有空洞（即表的中间没有被删除的行），MyISAM允许在一个进程读表的同时，另一进程从表尾 插入记录。
+> - 但是innodb存储引擎是不支持的。
 
 ### 行锁
 
-InnoDB和MyISAM有两个本质的区别：InnoDB支持行锁、InnoDB支持事务
+InnoDB和MyISAM有两个本质的区别：**InnoDB支持行锁、InnoDB支持事务**
 
 InnoDB实现了以下**两种**类型的行锁：
 
