--- a/MySQL/src/main/resources/3.数据库索引.md
+++ b/MySQL/src/main/resources/3.数据库索引.md
@@ -119,7 +119,7 @@ B+树是有序的，在这种范围查询中，优势非常大，直接遍历比
 
 ### 普通索引
 
-​     这是最基本的索引，它**没有任何限制**，比如上文中为title字段创建的索引就是一个普通索引，MyIASM中默认的BTREE类型的索引，也是我们大多数情况下用到的索引。 
+这是最基本的索引，它**没有任何限制**，比如上文中为title字段创建的索引就是一个普通索引，MyIASM中默认的BTREE类型的索引，也是我们大多数情况下用到的索引。 
 
 ```sql
 –直接创建索引
