--- a/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/04 谈谈你对分布式的理解，为什么引入分布式？.md
+++ b/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/04 谈谈你对分布式的理解，为什么引入分布式？.md
@@ -51,7 +51,7 @@
 比如双 11 活动，平时订单少 50 台机器就够了，到了 11 订单量剧增，服务器增加到 100 台，每台机器之间相互独立，互不影响。
 
 1. **系统容错能力提升**
-   ![图片描述](aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMTI5NzRiMDAwMWRmOWEwNTc4MDMzMy5wbmc)
+   ![图片描述](pic/aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMTI5NzRiMDAwMWRmOWEwNTc4MDMzMy5wbmc)
 
 （手里有笔，能给面试官随便画画）
 
@@ -80,7 +80,7 @@
 
 ## 深入分析：
 
-![图片描述](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMTI5NzMwMDAwMWQyODUxMTg0MDcxOC5wbmc?x-oss-process=image/format,png)
+![图片描述](pic/aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMTI5NzMwMDAwMWQyODUxMTg0MDcxOC5wbmc.jfif)
 
 （图片来源：https://medium.com/）
 
@@ -104,7 +104,7 @@
 ### 3. 分布式系统和微服务什么关系
 
 关于分布式系统和微服务，两者都只是一种概念。如果你采用微服务，就意味着系统一定是分布式的，分布式系统具有的优缺点在微服务理都会体现，个人理解微服务是分布式系统的一种具体落地方案。
-![图片描述](aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMTI5NmE2MDAwMTcyNmMwNjkxMDM5NS5wbmc)
+![图片描述](pic/aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMTI5NmE2MDAwMTcyNmMwNjkxMDM5NS5wbmc)
 
 
 
