--- a/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/15 如何解决消息重复，保证消息顺序问题.md
+++ b/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/15 如何解决消息重复，保证消息顺序问题.md
@@ -34,52 +34,19 @@
 
 随手写了一段伪代码给面试官：
 
-```
+```java
 //没收到给用户消费通知,先判断这个orderId时候已经有加过积分的历史记录，如果没有操作过，则增加。如果已经操作过，直接返回不做任何处理。
-
-
-
 List<UserPointHistory> lists = userPointDao.queryHistory(orderId);
-
-
-
 if(CollectionUtils.isNotEmpty(lists)){
+  	//1.加100分。
+  	userPoint.add(pointCount,orderId);
 
-
-
-  //1.加100分。
-
-
-
-  userPoint.add(pointCount,orderId);
-
-
-
-  //2.保存增加记录
-
-
-
-  userPoint.addHistory(orderId);
-
-
-
+  	//2.保存增加记录
+  	userPoint.addHistory(orderId);
 }else{
-
-
-
-  log.info("该订单已经操作过积分操作")
-
-
-
-  return null;
-
-
-
+  	log.info("该订单已经操作过积分操作")
+  	return null;
 }
-
-
-
- 
 ```
 
 Tip：如果幂等还不明白可以看我写的《谈谈怎么理解接口幂等设计，项目中如何保证接口幂等》，上面的代码加积分和保存增加记录要保证事务性，如果你不知道ACID千万别给自己挖坑，被面试官逮住ACID一顿问。
@@ -145,4 +112,4 @@ Topic就是一个字符串，给同一类消息取个名字加以区分，如：
 
 当然面试的时候你可别这么干巴巴两句话，那显得你太没水平了，面试最理想的效果就是无论多简单的问题你都能**滔滔不绝**，**让面试官无话可说**。
 
-阅读全文 
+ 
