--- a/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/21 限流不能乱用-系统限流最佳实践.md
+++ b/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/21 限流不能乱用-系统限流最佳实践.md
@@ -37,7 +37,7 @@
 **2.漏斗算法：**
 
 可以理解成一个固定容量的漏桶，不管流量多还是少，我都按照常量固定速率流出水滴，如果流入水滴超出了桶的容量，就让水溢出。这种算法优点是稳定速率，缺点是无法面对突发流量。
-![图片描述](aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMzI3ZjExMDAwMTQ4NDYwOTgwMDc4NC5wbmc)
+![图片描述](pic/aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMzI3ZjExMDAwMTQ4NDYwOTgwMDc4NC5wbmc)
 
 *图片来源：https://developpaper.com/*
 
@@ -46,7 +46,7 @@
 让每次请求调用需要先获取令牌，只有拿到令牌，才有机会继续执行，否则选择等待可用的令牌，或者直接拒绝。优点是系统发放令牌的速率是可变的，能够面对突发流量，缺点是有点复杂。
 
 具体使用哪种算法，要根据具体业务场景，比如系统时候会有突发流量，调用方重要程度等，如果调用方不是很重要，为了顾全大局，直接放调用方稍后重试。
-![图片描述](aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMzI3ZjM3MDAwMWJjZTcwNzM0MDgxNy5wbmc)
+![图片描述](pic/aHR0cHM6Ly9pbWcubXVrZXdhbmcuY29tLzVlMzI3ZjM3MDAwMWJjZTcwNzM0MDgxNy5wbmc)
 
 *图片来源：https://developpaper.com/*
 
@@ -70,63 +70,22 @@
 于具体使用的技术和工具并不是重点，还有人说我也不用Guava，也不用Thread sleep，更不用Hystrix，我用Nginx，前系统最前端同样可以做限流，方案可行，条条大路通罗马。
 **使用线程池实现：**
 
-```
+```java
 @SpringBootTest
-
-
-
 @RunWith(SpringRunner.class)
-
-
-
 public class RejectTest {
 
-
-
- 
-
-
-
     @Test
-
-
-
     public void testReject() {
-
-
-
         for (int i = 0; i < 25; ++i) {
-
-
-
             new Thread(() -> 
-
-
-
                  // do something     
-
-
-
                       )).start();
-
-
-
         }
 
-
-
         // 防止主线程提前结束执行
-
-
-
         TimeUtils.sleep(50);
-
-
-
     }
-
-
-
 }
 ```
 
@@ -134,31 +93,13 @@ public class RejectTest {
 
 还记得《12.本地缓存Google Guava的使用》吗？它还有限流的功能。
 
-```
+```java
 RateLimiter rateLimiter = RateLimiter.create(20.0);
-
-
-
 boolean token = rateLimiter.tryAcquire();
-
-
-
 if (token) {
-
-
-
 	System.out.println("pass");
-
-
-
 } else {
-
-
-
 	System.out.println("refuse");
-
-
-
 }
 ```
 
