--- a/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/23 分布式系统下分布式锁的实现.md
+++ b/Distribution/慕课专栏-面试精讲之面试考点及大厂真题-分布式专栏/23 分布式系统下分布式锁的实现.md
@@ -74,38 +74,14 @@ Java本身提供了两种内置的锁的实现，一种是由JVM实现的synchro
 
 **方法一：使用setnx命令加锁**
 
-```
+```java
 public static void wrongGetLock1(Jedis jedis, String lockKey, String requestId, int expireTime) {
-
-
-
-		// 第一步：加锁
-
-
-
+	// 第一步：加锁
     Long result = jedis.setnx(lockKey, requestId);
-
-
-
     if (result == 1) {
-
-
-
         // 第二步：设置过期时间
-
-
-
         jedis.expire(lockKey, expireTime);
-
-
-
     }
-
-
-
- 
-
-
 
 }
 ```
@@ -123,98 +99,29 @@ public static void wrongGetLock1(Jedis jedis, String lockKey, String requestId, 
 
 **改进：**
 
-```
+```java
 public class RedisLockDemo {
 
-
-
- 
-
-
-
     private static final String SET_IF_NOT_EXIST = "NX";
-
-
-
     private static final String SET_WITH_EXPIRE_TIME = "PX";
 
-
-
- 
-
-
-
     /**
-
-
-
      * 获取分布式锁
-
-
-
      * @param jedis Redis客户端
-
-
-
      * @param lockKey 锁
-
-
-
      * @param requestId 请求标识
-
-
-
      * @param expireTime 超期时间
-
-
-
      * @return 是否获取成功
-
-
-
      */
-
-
-
     public static boolean getLock(Jedis jedis, String lockKey, String requestId, int expireTime) {
 
-
-
- 
-
-
-
-				// 两步合二为一，一行代码加锁并设置 + 过期时间。
-
-
-
+		// 两步合二为一，一行代码加锁并设置 + 过期时间。
         if (1 == jedis.set(lockKey, requestId, SET_IF_NOT_EXIST, SET_WITH_EXPIRE_TIME, expireTime)) {
-
-
-
             return true;//加锁成功
-
-
-
         }
-
-
-
         return false;//加锁失败
 
-
-
- 
-
-
-
     }
-
-
-
- 
-
-
 
 }
 ```
@@ -233,35 +140,14 @@ public class RedisLockDemo {
 
 **使用del命令解锁**
 
-```
+```java
 public static void unLock(Jedis jedis, String lockKey, String requestId) {
 
-
-
-        
-
-
-
     // 第一步： 使用 requestId 判断加锁与解锁是不是同一个客户端
-
-
-
     if (requestId.equals(jedis.get(lockKey))) {
-
-
-
         // 第二步： 若在此时，这把锁突然不是这个客户端的，则会误解锁
-
-
-
         jedis.del(lockKey);
-
-
-
     }
-
-
-
 }
 ```
 
@@ -271,99 +157,28 @@ public static void unLock(Jedis jedis, String lockKey, String requestId) {
 
 **代码改进：**
 
-```
+```java
 public class RedisTool {
-
-
-
- 
-
-
 
     private static final Long RELEASE_SUCCESS = 1L;
 
-
-
- 
-
-
-
     /**
-
-
-
      * 释放分布式锁
-
-
-
      * @param jedis Redis客户端
-
-
-
      * @param lockKey 锁
-
-
-
      * @param requestId 请求标识
-
-
-
      * @return 是否释放成功
-
-
-
      */
-
-
-
     public static boolean releaseDistributedLock(Jedis jedis, String lockKey, String requestId) {
 
-
-
- 
-
-
-
         String script = "if redis.call('get', KEYS[1]) == ARGV[1] then return redis.call('del', KEYS[1]) else return 0 end";
-
-
-
         Object result = jedis.eval(script, Collections.singletonList(lockKey), Collections.singletonList(requestId));
 
-
-
- 
-
-
-
         if (RELEASE_SUCCESS.equals(result)) {
-
-
-
             return true;
-
-
-
         }
-
-
-
         return false;
-
-
-
- 
-
-
-
     }
-
-
-
- 
-
-
-
 }
 ```
 
@@ -410,39 +225,15 @@ ZK中还有一种名为临时节点的节点，临时节点由某个客户端创
 
 这样 lock 和 unlock 的思路就很简单了，伪代码：
 
-```
+```mysql
 def lock ：
-
-
-
     exec sql: insert into locked—table (xxx) values (xxx)
-
-
-
     if result == true :
-
-
-
         return true
-
-
-
     else :
-
-
-
         return false
 
-
-
- 
-
-
-
 def unlock ：
-
-
-
     exec sql: delete from lockedOrder where order_id='order_id'
 ```
 
