--- a/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
+++ b/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
@@ -19,7 +19,7 @@ void sort() {
     // 每一趟完整的循环就对完成一个最大值或者最小值的放置   
     // 那每一趟都可以删去枝叶，也就是最大值或者最小值的位置   
     // i的大小也同样可以确定已经完成排序的数值的个数  
-    for (int i = 0; i < array.length; i++) {  
+    for (int i = 0; i < array.length - 1; i++) {  
         for (int j = 0; j < array.length - i - 1; j++) {   
             if (array[j] > array[j + 1]) {           
                 swap(array[j], array[j+1]);      
@@ -44,7 +44,7 @@ void sort() {
     // 每一趟完整的循环就对完成一个最大值或者最小值的放置   
     // 那每一趟都可以删去枝叶，也就是最大值或者最小值的位置   
     // i的大小也同样可以确定已经完成排序的数值的个数  
-    for (int i = 0; i < array.length; i++) {  
+    for (int i = 0; i < array.length - 1; i++) {  
         
          //每比较一趟就重新初始化为0
         isChange = 0;
