--- a/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
+++ b/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
@@ -75,31 +75,51 @@ void sort() {
 ### 对应代码
 
 ```java
-static void sort(int left, int right) { 
-    if (left < right) {   
-        // 通过split已经完成了左右分割，左边数一定小于中线，右边数一定大于中线    
-        int mid = split(left, right);  
-        // 对左右分区再以中线划分       
-        sort(mid+1, right);   
-        sort(left, mid-1); 
-    }
-}
+/**
+ * @param arr 要进行排序的数组
+ * @param L   指向数组最左侧的元素
+ * @param R   指向数组最右侧的元素
+ * @return
+ */
+public static void quickSort(int[] arr, int L, int R) {
+    // 使i等于最左侧数据的索引
+    int i = L;
+    // 使j等于最右侧数据的索引
+    int j = R;
 
-static int split(int left, int right) { 
-    // 以当前范围数组的第一个值作为中线
-    int temp = array[left];   
-    while(left < right){    
-        // 右指针出现了一个数比中线小，则与中线进行交换   
-        while(left < right && temp < array[right]) 
-            right--;    
-        array[left] = array[right];  
-        // 左指针出现了一个数比中线大，则与中线进行交换  
-        while(left < right && temp > array[left]) left++;  
-        array[right] = array[left];
-    }  
-    // 此时left == right，并无所谓是谁来进行交换 
-    array[left] = temp;  
-    return left;
+    // 找到中间值作为支点
+    int pivot = arr[(L + R) / 2];
+
+    // 当i<=j的情况下，不断的判断是否满足两边数据交换的条件
+    while (i <= j) {
+
+        // 寻找左侧比支点大的数据的索引
+        while (pivot > arr[i]) {
+            i++;
+        }
+        // 寻找右侧比支点大的数据的索引
+        while (pivot < arr[j]) {
+            j--;
+        }
+
+        // 若i<=j说明两端都已经找到需要交换的数据
+        if (i <= j) {
+            int temp = arr[i];
+            arr[i] = arr[j];
+            arr[j] = temp;
+            i++; j--;
+        }
+    }
+
+    //“左边”再做排序，直到左边剩下一个数(递归出口)
+    if (L < j) {
+        quickSort(arr, L, j);
+    }
+
+    //“右边”再做排序，直到右边剩下一个数(递归出口)
+    if (i < R) {
+        quickSort(arr, i, R);
+    }
 }
 ```
 
