--- a/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
+++ b/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
@@ -13,7 +13,7 @@
 ### 对应代码
 
 ```java
-void sort() { 
+public static void bubbleSort() { 
     // 修剪枝叶的优化方法  
     // 基于原理：  
     // 每一趟完整的循环就对完成一个最大值或者最小值的放置   
@@ -38,7 +38,7 @@ void sort() {
  优化：如果一趟排序后也没有交换位置，那么该数组已有序～ 
 
 ```java
-void sort() { 
+public static void bubbleSort() { 
     // 修剪枝叶的优化方法  
     // 基于原理：  
     // 每一趟完整的循环就对完成一个最大值或者最小值的放置   
@@ -142,20 +142,31 @@ public static void quickSort(int[] arr, int L, int R) {
 ### 对应代码
 
 ```java
-void sort() {   
-    // 修建枝叶的方法虽然可以用，但是效果微乎其微   
-    // 因为这只是根据数学方法推算，可以得知变量i=0时，是不需要工作的，也就删去的一小部分的工作  
-    for (int i = 1; i < array.length; i++) {    
-        int j = i;     
-        int temp = array[i];    
-        // 如果当前已完成排序数组中，下标数值大于当前数值   
-        // 就把这个数值往后进行移动       
-        while (j > 0 && temp < array[j - 1]) {
-            array[j] = array[j - 1];   
-            j--;     
-        }    
-        if (j != i) array[j] = temp; 
+public static void insertionSort(int[] arr) {
+    //临时变量
+    int temp;
+
+    //外层循环控制需要排序的趟数(从1开始因为将第0位看成了有序数据)
+    for (int i = 1; i < arr.length; i++) {
+
+        //temp保存的是每次取出来和前面有序队列比较的那个值
+        temp = arr[i];
+
+        //如果前一位(已排序的数据)比当前数据要大，那么就进入循环比较[参考第二趟排序]
+        while (i >= 1 && arr[i - 1] > temp) {
+
+            //往后退一个位置，让当前数据与之前前位进行比较
+            arr[i] = arr[i - 1];
+
+            //不断往前，直到退出循环
+            i--;
+
+        }
+
+        //退出了循环说明找到了合适的位置了，将当前数据插入合适的位置中
+        arr[i] = temp;
     }
+
 }
 ```
 
@@ -179,23 +190,38 @@ void sort() {
 ### 对应代码
 
 ```java
-static void sort() { 
-    // gap也就相当于组别 
-    for (int gap = array.length >> 1; gap > 0; gap /= 2) {  
-        for (int i = gap; i < array.length; i++) {    
-            int j = i;       
-            while (j - gap >= 0 && array[j] < array[j - gap]) {   
-                swap(array[j], array[j - gap]);   
-                j -= gap;    
-            }       
-        }   
+public static void shellSort(int[] array) {
+    // gap也就相当于组别
+    for (int gap = array.length >> 1; gap > 0; gap /= 2) {
+        // 对分的每个组进行插入排序，直至完毕
+        for (int i = gap; i < array.length; i++) {
+            int j = i;
+            while (j - gap >= 0 && array[j] < array[j - gap]) {
+
+                int temp = array[j];
+                array[j] = array[j - gap];
+                array[j - gap] = temp;
+
+                j -= gap;
+            }
+        }
     }
 }
 ```
 
 ### 原理及其实现方法
 
-先对代码做一个解释：（1）gap：也就是是我说的组别，分成两个部分 （2）array[j]：右半边需要交换的序列 （3）array[j - gap]：左半边交换的序列 （4）j -= gap：是为了保障最后一位被遗忘的数据被处理。
+ 希尔排序实质上就是插入排序的增强版，希尔排序将数组分隔成n组来进行插入排序，**直至该数组宏观上有序，**最后再进行插入排序时就不用移动那么多次位置了～ 
+
+先对代码做一个解释：
+
+（1）gap：也就是是我说的组别，分成两个部分 
+
+（2）array[j]：右半边需要交换的序列 
+
+（3）array[j - gap]：左半边交换的序列 
+
+（4）j -= gap：是为了保障最后一位被遗忘的数据被处理。
 
 ```
 原序列：4 -> 3 -> 2 -> 5 -> 1
@@ -556,3 +582,5 @@ public class RadixSort {
 因为算法的使用肯定考虑到使用场景，所以知道时空复杂度，是使用使用算法的前提。但是已经不再提倡选择和冒泡排序了，因为效率实在太差。
 
 ![还不会十大排序，是准备家里蹲吗](pic/424612368e19428d92ba9d44e4480615)
+
+![还不会十大排序，是准备家里蹲吗](pic/3ysort.webp)
