--- a/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
+++ b/DataStructure&Algorithms/Algorithms/src/main/resources/排序算法总结.md
@@ -241,18 +241,30 @@ public static void shellSort(int[] array) {
 ### 对应代码
 
 ```java
-void sort() {
-	// 修剪枝叶的优化方法 
-    // 基于原理：和冒泡排序完全一致。  
-    for (int i = 0; i < array.length; i++) {  
-        // 用于标示最小值下标     
-        int min = i;      
-        // 循环方式找到最小值  
-        for (int j = i+1; j < array.length ; j++) {   
-            if (array[j] < array[min]) 
-                min = j; 
-        }        
-        swap(array[min], array[i]);    
+/**
+ * 选择排序
+ *
+ * @param arr
+ */
+public static void selectionSort(int[] arr) {
+    // 控制需要循环的次数
+    for (int i = 0; i < arr.length - 1; i++) {
+
+        // 每次新的循环将索引重新置为0
+        int index = 0;
+
+        // 内层循环控制遍历数组的个数并得到最大数的角标
+        // 每次遍历找到最大的那个数的索引
+        for (int j = 0; j < arr.length - i; j++) {
+            if (arr[j] > arr[index]) {
+                index = j;
+            }
+        }
+
+        // 找到最大的索引和最后一个无序的值交换
+        int temp = arr[index];
+        arr[index] = arr[arr.length - i - 1];
+        arr[arr.length - i - 1] = temp;
     }
 }
 ```
@@ -274,33 +286,74 @@ void sort() {
 ### 对应代码
 
 ```java
-static void sort(){
-    int len = arr.length;  
-    // 构建大顶堆  
-    for (int i = (arr.length - 1) / 2; i >= 0; i--) 
-        heapSort(i, arr.length - 1);  
-    for (int i = arr.length - 1; i > 0; i--) {    
-        // 交换0，最后号位，也就把最大值放到了最后    
-        swap(0, i);      
-        // len减1，保证了最后一位数并不会处理 
-        // 也就完成了倒数的大数的排序   
-        len--;    
-        heapSort(0, len);  
+/**
+ * 堆排序
+ * @param arr
+ */
+public static void heapSort(int[] arr) {
+    for (int i = 0; i < arr.length; i++) {
+
+        //每完成一次建堆就可以排除一个元素了
+        maxHeapify(arr, arr.length - i);
+
+        //交换
+        int temp = arr[0];
+        arr[0] = arr[(arr.length - 1) - i];
+        arr[(arr.length - 1) - i] = temp;
+
     }
-} 
-static void heapSort(int i, int len) {   
-    if (i > len) return;  
-    int maxIdx = i; 
-    int firPosition = i * 2 + 1;  
-    int secPosition = i * 2 + 2;   
-    // 左右大小比较，左边为大   
-    if (firPosition < len && arr[firPosition] > arr[maxIdx]) 
-        maxIdx = firPosition;    
-    if (secPosition < len && arr[secPosition] > arr[maxIdx])
-        maxIdx = secPosition;  
-    if (maxIdx != i) {     
-        swap(maxIdx, i);  
-        heapSort(maxIdx, len); 
+}
+
+/**
+ * 完成一次建堆，最大值在堆的顶部(根节点)
+ */
+public static void maxHeapify(int[] arr, int size) {
+
+    for (int i = size - 1; i >= 0; i--) {
+        heapify(arr, i, size);
+    }
+
+}
+
+
+/**
+ * 建堆
+ *
+ * @param arr          看作是完全二叉树
+ * @param currentRootNode 当前父节点位置
+ * @param size            节点总数
+ */
+public static void heapify(int[] arr, int currentRootNode, int size) {
+
+    if (currentRootNode < size) {
+        //左子树和右字数的位置
+        int left = 2 * currentRootNode + 1;
+        int right = 2 * currentRootNode + 2;
+
+        //把当前父节点位置看成是最大的
+        int max = currentRootNode;
+
+        if (left < size) {
+            //如果比当前根元素要大，记录它的位置
+            if (arr[max] < arr[left]) {
+                max = left;
+            }
+        }
+        if (right < size) {
+            //如果比当前根元素要大，记录它的位置
+            if (arr[max] < arr[right]) {
+                max = right;
+            }
+        }
+        //如果最大的不是根元素位置，那么就交换
+        if (max != currentRootNode) {
+            int temp = arr[max];
+            arr[max] = arr[currentRootNode];
+            arr[currentRootNode] = temp;
+
+            //继续比较，直到完成一次建堆
+            heapify(arr, max, size);
+        }
     }
 }
 ```
