--- a/DataStructure&Algorithms/Algorithms/src/main/resources/查找算法总结.md
+++ b/DataStructure&Algorithms/Algorithms/src/main/resources/查找算法总结.md
@@ -89,29 +89,29 @@ public class BinarySearch {
     }
 
     /**
-     * 二分查找
+     * 二分查找算法
+     *
+     * @param arr
+     * @param key
+     * @return
      */
-    public static int binarySearch(int[] list, int key) {
-        int low = 0;
-        int high = list.length - 1;
+    public static int binarySearch(int[] arr, int key, int L, int R) {
+        int l = L;
+        int r = R;
 
-        while (low <= high) {
-            int middle = (low + high) / 2;
-
-            // 判断中间元素是否与给定值相等
-            if (list[middle] == key) {
+        while (l <= r) {
+            int middle = (l + r) / 2;
+            if (arr[middle] == key) {
                 return middle;
-            } else {
-                if (list[middle] > key) {
-                    // 在中间元素的左半区查找
-                    high = middle - 1;
-                } else {
-                    // 在中间元素的右半区查找
-                    low = middle + 1;
-                }
             }
+
+            if (arr[middle] > key) {
+                r = middle - 1;
+            } else {
+                l = middle + 1;
+            }
+            binarySearch(arr, key, l, r);
         }
-        // 没有找到（查找失败）
         return -1;
     }
 
