--- a/Concurrency/doc/拉勾-Java并发编程78讲/11-Java内存模型/第59讲：什么是“内存可见性”问题？.md
+++ b/Concurrency/doc/拉勾-Java并发编程78讲/11-Java内存模型/第59讲：什么是“内存可见性”问题？.md
@@ -42,18 +42,17 @@ public class Visibility {
 
 ```java
 /**
-
-描述：     演示可见性带来的问题
-*/
+ * 描述：     演示可见性带来的问题
+ */
 public class VisibilityProblem {
 
-int a = 10;
-int b = 20;
+    int a = 10;
+    int b = 20;
 
-private void change() {
-    a = 30;
-    b = a;
-}
+    private void change() {
+        a = 30;
+        b = a;
+    }
 
 
     private void print() {
@@ -88,7 +87,6 @@ private void change() {
             }).start();
         }
     }
-
 }
 ```
 
