--- a/Concurrency/doc/拉勾-Java并发编程78讲/13-死锁问题/第69讲：如何用命令行和代码定位死锁？.md
+++ b/Concurrency/doc/拉勾-Java并发编程78讲/13-死锁问题/第69讲：如何用命令行和代码定位死锁？.md
@@ -13,9 +13,8 @@
 
 ```java
 /**
-
-描述：     必定死锁的情况
-*/
+ * 描述：     必定死锁的情况
+ */
 public class MustDeadLock implements Runnable {
 
 public int flag;
