--- a/Others/doc/面试考点及注意事项.md
+++ b/Others/doc/面试考点及注意事项.md
@@ -230,3 +230,113 @@
 6.Spring的IOC有什么优势。
 
 7.Spring如何维护它拥有的bean。
+
+
+
+
+
+1:手写一个单例模式（双重检查锁机制）
+
+2:volatile是如何实现变量可见的？用到了哪些指令？工作内存和主内存解决了什么问题？以及他们之间的交互过程
+
+3:jvm如何调优？写几个参数出来？尝试设计一个自己的JVM，你会如何设计？
+
+4:dubbo的group怎么用？超时时间设置的作用域有哪些？优先级是什么？
+
+5:ThreadLocal底层如何实现？map中的key是什么？vlaue是什么？需要解决什么问题？哪个方法可以防止内存泄露
+
+6:讲一下currentHashMap的get方法过程，如何链表转红黑树？
+
+7:有一个表t1，列为ABC，索引为AC，现在select xx from table where c=xx a =xx有没有用到索引？
+
+8:cas是什么？给你笔画一下具体的实现过程？cas什么时候结束？
+
+9:java的锁存储在哪？占几个比特位？锁是如何升级的？
+
+10:redis的缓存淘汰策略有哪些？LRU和LFU区别，手写一个LRU
+
+11:写出线程池的核心参数，并解释，然后说明线程池是有哪些放弃策略？
+
+12:http属于什么层协议？与https的区别是什么？Tcp协议属于那一层？OSI七层网络模型有哪些？三次握手和四次挥手的过程？为什么握手要三次，挥手要四次？
+
+13:线上cpu占用率高怎么办？如何排查这个问题，用哪些命令
+
+14:spring使用了哪些设计模式？BeanFactory和Factory的区别是什么？
+
+15:策略模式的使用场景？说一下它的优点和缺点？
+
+16:给你一个秒杀场景，如何应对短时间的高峰请求问题？数据库如何防止并发问题？秒杀如何实现不同的客户端的时间一致性？
+
+17:redis的基本数据类型有哪些？hash的使用场景？如何通过redis实现一个阻塞队列？
+
+18:画出dubbo的调用关系图？并举例说明调用链
+
+19:cas是什么？解释一下cas的原理。并用笔画出来，aba问题怎么解决？
+
+20:你们的线程池是如何配比的？默认的线程数是多少?写出线程池的几个参数，并结合你们的项目解释一下是如何调优的？
+
+21:sring的事务用过吗？简述一下如何使用？当方法A使用了事务，方法B也使用了事务，他们的事务策略都是:如果没有新的事务就开启一个事务，问调用过程中事务是如何传播的？
+
+22:给你一串连续的数字，1到10000，随机除去两个数，怎样快速找到这两个数？
+
+23:tomcat的IO框架经历了怎样的变化？谈谈你对NIO流的理解?
+
+24:redis的缓存策略有哪些？手动写一下LRU的实现方法,并介绍一下LFU
+
+25:redis的集群是如何找到具体的key的？你们的集群采用哪种持久化策略？为什么？集群搭建模式是什么？
+
+26:一串有负数和正数的数字，用算法实现连续的数字加起来的和最大的一串数字？
+
+27:hashmap为什么是线程不安全的？线程安全的有哪些集合？讲一下集合框架，包括map和list
+
+28:秒杀场景下如何实现分布式锁？redis搭建的集群会存在并发问题吗？怎么解决？
+
+29:目前jdk用的垃圾回收器是什么？讲一讲垃圾回收的内存划分？引用链可达是从哪里开始回收的？扩展：职责链模式
+
+30：java有哪些加载器？Java的类加载机制是什么？双亲委派机制是什么？有什么好处？我如果想自定义一个名为Object的类，如何加载它？
+
+31：你知道哪些设计模式？在项目中用到了哪些设计模式？讲一讲具体的应用场景和实现方式
+
+32:redis集群是把数据存储在所有节点吗？如果是存储一个节点？它怎么知道存储到哪个节点？当master节点挂了，缓存是不是就删除了？增加一个节点或者删除一个节点，集群会怎么处理？
+
+33:方法前如果不声明private、public，那么是什么？它的级别是什么？
+
+34:有没有线上调优JVM的经验？如何打印gc细节？
+
+35:把你知道的GC算法都说一下，虚拟机经历了怎样的变化才发展到今天?
+
+36:你做了什么项目？有哪些功能？有什么优势？解决了什么问题？你认为还有那些优化的点？
+
+37:什么是可重入锁？假如我一个线程申请了可重入锁，那么子线程可以再次用到可重入锁吗？
+
+38、jvm的内存结构是什么样的？请画出来并且是哪些是线程共享的？哪些是线程私有的？
+
+39、双向升序链表的插入和删除（笔试）
+
+40、二维数组的遍历和赋值（笔试）
+
+42、算法：一个公司找猎头拿简历 1000份，每个猎头需要的佣金一样，但每个猎头拥有的简历数不相同（可能重复） ，问公司如何能雇佣最少的猎头找到更多的简历
+
+42、 接口限流策略有哪些
+
+43、微服务雪崩后怎么处理的?
+
+44、多线程环境,线程如何同步？
+
+45、用多线程统计1到1000000之间有多少个素数，并输出素数（假设cpu有四核）（机试）
+
+46、用java实现各订单生成器，需要考虑可读、并发、不可重复（机试）
+
+47、归并排序（机试）
+
+48、rabbitmq消息重复和丢失如何处理?
+
+49、一个部分有序的数组，如何找到一个指定的数字？要求时间复杂度不能超过log(n)
+
+50: hystrix如何实现服务降级、治理、熔断，讲一讲微服务中服务熔断的过程？你们都是怎么处理的？
+
+ 51：mysql的limit查询如何进行优化？索引遵循什么原则？
+
+52：ElasticSearch了解吗？ElasticsSearch如何计算评分？评分公式写出来，有哪些查询命令？
+
+53：微服务的事务你们用什么解决？事务的传播机制，方法A调用方法B，方法A有事务，问调用方法B还会有事务吗？
